--- a/_dev/styles/calculator.less
+++ b/_dev/styles/calculator.less
@@ -1,1 +1,10 @@
-.calculator {}
+.calculator {
+  margin: 15px;
+
+  input {
+    margin: 5px 0;
+    border: 1px solid #000;
+    display: block;
+    text-align: right;
+  }
+}
